# algoritmos_listas

./: CMakeLists.txt
lista_1/: CMakeLists.txt  README.md  exercicio_1.c  exercicio_10.c  exercicio_2.c  exercicio_3.c  exercicio_4.c  exercicio_5.c  exercicio_6.c  exercicio_7.c  exercicio_8.c  exercicio_9.c
lista_2/: CMakeLists.txt  README.md  exercicio_1.2.c  exercicio_10.2.c  exercicio_2.2.c  exercicio_3.2.c  exercicio_4.2.c  exercicio_5.2.c  exercicio_6.2.c  exercicio_7.2.c  exercicio_8.2.c  exercicio_9.2.c
lista_3/: CMakeLists.txt  README.md  exercicio_1.3.c  exercicio_10.3.c  exercicio_2.3.c  exercicio_3.3.c  exercicio_4.3.c  exercicio_5.3.c  exercicio_6.3.c  exercicio_7.3.c  exercicio_8.3.c  exercicio_9.3.c
lista_4/: CMakeLists.txt  README.md  exercicio_1.4.c  exercicio_10.4.c  exercicio_11.4.c  exercicio_12.4.c  exercicio_13.4.c  exercicio_2.4.c  exercicio_3.4.c  exercicio_4.4.c  exercicio_5.4.c  exercicio_6.4.c  exercicio_7.4.c  exercicio_8.4.c  exercicio_9.4.c
